--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+0.0.3
+    https://github.com/killbill/killbill-plugin-framework-java/issues/1
+    https://github.com/killbill/killbill-plugin-framework-java/issues/2
+    Update to killbill-oss-parent 0.9.4
+
 0.0.2
     Bus fixes
 
