--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+0.1.0
+    Initial release for Kill Bill 0.14.x
+
 0.0.3
     https://github.com/killbill/killbill-plugin-framework-java/issues/1
     https://github.com/killbill/killbill-plugin-framework-java/issues/2
