--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+0.2.0
+    Update to killbill-oss-parent 0.13
+
 0.1.0
     Initial release for Kill Bill 0.14.x
     Add utilities for multi-tenancy configuration
