--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+0.2.1
+    Add missing limit in PluginPaymentDao query
+    Fix Java 1.6 compilation
+
 0.2.0
     Update to killbill-oss-parent 0.31 (routing -> control renaming)
 
