--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+0.2.2
+    Add support for dryRun option in PluginInvoicePluginApi
+
 0.2.1
     Add missing limit in PluginPaymentDao query
     Fix Java 1.6 compilation
