invoice: fix issue with new invoices in PluginInvoicePluginApi#getAdditionalTaxInvoiceItems
Signed-off-by: Pierre-Alexandre Meyer <pierre@mouraf.org>

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+0.2.3
+    Fix issue with new invoices in PluginInvoicePluginApi#getAdditionalTaxInvoiceItems
+
 0.2.2
     Add support for dryRun option in PluginInvoicePluginApi
 
