--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+0.3.1
+    Introduce PluginProperties#findAndDecodePluginPropertyValue
+
 0.3.0
     Initial release for Kill Bill 0.16.x
     Fix payment method queries
