--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+0.3.2
+    Constants in PluginHostedPaymentPageFormDescriptor are now public
+    Add utility functions for money calculations
+    Update killbill-oss-parent to 0.88
+
 0.3.1
     Introduce PluginProperties#findAndDecodePluginPropertyValue
 
