--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+1.0.2
+    Fix mocking of PaymentTransaction
+    Update to killbill-oss-parent 0.130
+
 1.0.1
     Update to killbill-oss-parent 0.118
 
