--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,9 @@
+1.0.3
+    Mock more payment APIs
+    Update to killbill-oss-parent 0.132
+
 1.0.2
     Fix mocking of PaymentTransaction
-    Update to killbill-oss-parent 0.130
 
 1.0.1
     Update to killbill-oss-parent 0.118
