--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+1.1.0
+    Initial release for KB 0.18.x
+    Update to killbill-oss-parent 0.140
+
 1.0.3
     Mock more payment APIs
     Update to killbill-oss-parent 0.132
