--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+1.1.2
+    Update to killbill-oss-parent 0.140.24
+
 1.1.1
     Make UTF8UrlDecoder support UTF-8 multi-byte characters
     Make PluginTenantConfigurableConfigurationHandler#getConfigurable thread-safe
