resources: add support for servlets backed by jooby
This library will now require JDK 1.8+.

Signed-off-by: Pierre-Alexandre Meyer <pierre@mouraf.org>

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+1.2.0
+    jdk1.8+ only
+    Support for servlets backed by jooby
+    Support for plugin healthchecks
+    Support for multi-regions configuration
+
 1.1.2
     Update to killbill-oss-parent 0.140.24
 
