--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+1.2.1
+    Make httpclient timeouts configurable
+    Add support for YAML config
+
 1.2.0
     jdk1.8+ only
     Support for servlets backed by jooby
