pom.xml: updates for release 1.2.3
Add two new constructors to allow overriding jooq SQLDialect

Signed-off-by: Kill Bill core team <contact@killbill.io>

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+1.2.3
+    Add two new constructors to allow overriding jooq SQLDialect
+
 1.2.2
     Add KillBillContext utility class to retrieve X-Request-Id
 
