--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+1.3.0
+    Add support for PostgreSQL and H2
+    https://github.com/killbill/killbill-plugin-framework-java/issues/16
+    Update to killbill-oss-parent 0.140.53
+
 1.2.3
     Add two new constructors to allow overriding jooq SQLDialect
 
