--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+1.3.1
+    payment: introduce PaymentApiWrapper
+
 1.3.0
     Add support for PostgreSQL and H2
     https://github.com/killbill/killbill-plugin-framework-java/issues/16
