--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,6 @@
 1.3.1
     payment: introduce PaymentApiWrapper
+    Update to killbill-oss-parent 0.140.54
 
 1.3.0
     Add support for PostgreSQL and H2
