--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+2.3.0
+    Config: improve YAML support
+    Update to killbill-oss-parent 0.141.53
+
 2.2.0
     Update to killbill-oss-parent 0.141.48
 
