--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+2.3.1
+    Add productName to PluginInvoiceItem 
+
 2.3.0
     Config: improve YAML support
     Update to killbill-oss-parent 0.141.53
