--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+4.0.1
+    Fix leak when deleting plugin configuration (mostly relevant for tests).
+
 4.0.0
     Initial release for Kill Bill 0.21.x
 
