--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+4.0.2
+    jooby: make Jackson module configurable
+    Update killbill-oss-parent to 0.143.42
+
 4.0.1
     Fix leak when deleting plugin configuration (mostly relevant for tests).
 
