--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+4.0.3
+    Fix StringIndexOutOfBoundsException when parsing ccLast4
+    Update killbill-oss-parent to 0.143.48
+
 4.0.2
     jooby: make Jackson module configurable
     Update killbill-oss-parent to 0.143.42
