--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+4.1.0
+    Reimplementation of tax calculation logic
+    Update killbill-oss-parent to 0.143.60
+
 4.0.3
     Fix StringIndexOutOfBoundsException when parsing ccLast4
     Update killbill-oss-parent to 0.143.48
