--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+4.2.0
+    Switch from org.osgi.core to org.apache.felix.framework
+
 4.1.0
     Reimplementation of tax calculation logic
     Update killbill-oss-parent to 0.143.60
