--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+4.2.4
+    Update killbill-oss-parent to 0.144.16
+    Remove gen.xml and README.txt from test jar
+
 4.2.3
     Remove ddl.sql from test jar
 
