--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+4.2.5
+    Update killbill-oss-parent to 0.144.20
+
 4.2.4
     Update killbill-oss-parent to 0.144.16
     Remove gen.xml and README.txt from test jar
