--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+4.2.12
+    Make HttpClient request timeout configurable
+    Update killbill-oss-parent to 0.144.51
+
 4.2.11
     Update killbill-oss-parent to 0.144.45
 
